Integrated AmbientWeatherAPI, updated main and supporting scripts

--- a/meteo_blue_weather_data.ipynb
+++ b/meteo_blue_weather_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,16 +18,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,242 +110,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>temperature_instant_°C</th>\n",
-       "      <th>precipitation_mm</th>\n",
-       "      <th>predictability_percent</th>\n",
-       "      <th>temperature_min_°C</th>\n",
-       "      <th>temperature_max_°C</th>\n",
-       "      <th>temperature_mean_°C</th>\n",
-       "      <th>sealevelpressure_min_hPa</th>\n",
-       "      <th>...</th>\n",
-       "      <th>humiditygreater90_hours_percent</th>\n",
-       "      <th>convective_precipitation_percent</th>\n",
-       "      <th>relativehumidity_min_percent</th>\n",
-       "      <th>relativehumidity_max_percent</th>\n",
-       "      <th>relativehumidity_mean_percent</th>\n",
-       "      <th>winddirection_degree</th>\n",
-       "      <th>precipitation_probability_percent</th>\n",
-       "      <th>uvindex</th>\n",
-       "      <th>rainspot</th>\n",
-       "      <th>predictability_class</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2025-05-08</td>\n",
-       "      <td>16.858833</td>\n",
-       "      <td>16.858833</td>\n",
-       "      <td>28.88</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>70</td>\n",
-       "      <td>27.00</td>\n",
-       "      <td>32.92</td>\n",
-       "      <td>30.08</td>\n",
-       "      <td>1003</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>63</td>\n",
-       "      <td>91</td>\n",
-       "      <td>75</td>\n",
-       "      <td>270</td>\n",
-       "      <td>24</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0011222111120211000210900112009002200001129000121</td>\n",
-       "      <td>4.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2025-05-09</td>\n",
-       "      <td>16.858833</td>\n",
-       "      <td>16.858833</td>\n",
-       "      <td>29.10</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>55</td>\n",
-       "      <td>28.06</td>\n",
-       "      <td>34.23</td>\n",
-       "      <td>30.95</td>\n",
-       "      <td>1003</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>60</td>\n",
-       "      <td>85</td>\n",
-       "      <td>74</td>\n",
-       "      <td>225</td>\n",
-       "      <td>37</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1100102110192322101922119213121111209100121019901</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2025-05-10</td>\n",
-       "      <td>16.858833</td>\n",
-       "      <td>16.858833</td>\n",
-       "      <td>28.94</td>\n",
-       "      <td>5.4</td>\n",
-       "      <td>54</td>\n",
-       "      <td>28.07</td>\n",
-       "      <td>34.03</td>\n",
-       "      <td>30.45</td>\n",
-       "      <td>1003</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>5.4</td>\n",
-       "      <td>64</td>\n",
-       "      <td>89</td>\n",
-       "      <td>79</td>\n",
-       "      <td>225</td>\n",
-       "      <td>61</td>\n",
-       "      <td>9</td>\n",
-       "      <td>2222313222222222222232213222211222121223222212222</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2025-05-08</td>\n",
-       "      <td>16.858833</td>\n",
-       "      <td>16.858833</td>\n",
-       "      <td>28.88</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>70</td>\n",
-       "      <td>27.00</td>\n",
-       "      <td>32.92</td>\n",
-       "      <td>30.08</td>\n",
-       "      <td>1003</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>63</td>\n",
-       "      <td>91</td>\n",
-       "      <td>75</td>\n",
-       "      <td>270</td>\n",
-       "      <td>24</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0011222111120211000210900112009002200001129000121</td>\n",
-       "      <td>4.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2025-05-09</td>\n",
-       "      <td>16.858833</td>\n",
-       "      <td>16.858833</td>\n",
-       "      <td>29.10</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>55</td>\n",
-       "      <td>28.06</td>\n",
-       "      <td>34.23</td>\n",
-       "      <td>30.95</td>\n",
-       "      <td>1003</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>0.2</td>\n",
-       "      <td>60</td>\n",
-       "      <td>85</td>\n",
-       "      <td>74</td>\n",
-       "      <td>225</td>\n",
-       "      <td>37</td>\n",
-       "      <td>10</td>\n",
-       "      <td>1100102110192322101922119213121111209100121019901</td>\n",
-       "      <td>3.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 25 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         date   latitude  longitude  temperature_instant_°C  precipitation_mm  \\\n",
-       "0  2025-05-08  16.858833  16.858833                   28.88               0.0   \n",
-       "1  2025-05-09  16.858833  16.858833                   29.10               0.2   \n",
-       "2  2025-05-10  16.858833  16.858833                   28.94               5.4   \n",
-       "3  2025-05-08  16.858833  16.858833                   28.88               0.0   \n",
-       "4  2025-05-09  16.858833  16.858833                   29.10               0.2   \n",
-       "\n",
-       "   predictability_percent  temperature_min_°C  temperature_max_°C  \\\n",
-       "0                      70               27.00               32.92   \n",
-       "1                      55               28.06               34.23   \n",
-       "2                      54               28.07               34.03   \n",
-       "3                      70               27.00               32.92   \n",
-       "4                      55               28.06               34.23   \n",
-       "\n",
-       "   temperature_mean_°C  sealevelpressure_min_hPa  ...  \\\n",
-       "0                30.08                      1003  ...   \n",
-       "1                30.95                      1003  ...   \n",
-       "2                30.45                      1003  ...   \n",
-       "3                30.08                      1003  ...   \n",
-       "4                30.95                      1003  ...   \n",
-       "\n",
-       "   humiditygreater90_hours_percent  convective_precipitation_percent  \\\n",
-       "0                             0.00                               0.0   \n",
-       "1                             0.04                               0.2   \n",
-       "2                             0.00                               5.4   \n",
-       "3                             0.00                               0.0   \n",
-       "4                             0.04                               0.2   \n",
-       "\n",
-       "   relativehumidity_min_percent  relativehumidity_max_percent  \\\n",
-       "0                            63                            91   \n",
-       "1                            60                            85   \n",
-       "2                            64                            89   \n",
-       "3                            63                            91   \n",
-       "4                            60                            85   \n",
-       "\n",
-       "   relativehumidity_mean_percent  winddirection_degree  \\\n",
-       "0                             75                   270   \n",
-       "1                             74                   225   \n",
-       "2                             79                   225   \n",
-       "3                             75                   270   \n",
-       "4                             74                   225   \n",
-       "\n",
-       "   precipitation_probability_percent  uvindex  \\\n",
-       "0                                 24       10   \n",
-       "1                                 37       10   \n",
-       "2                                 61        9   \n",
-       "3                                 24       10   \n",
-       "4                                 37       10   \n",
-       "\n",
-       "                                            rainspot  predictability_class  \n",
-       "0  0011222111120211000210900112009002200001129000121                   4.0  \n",
-       "1  1100102110192322101922119213121111209100121019901                   3.0  \n",
-       "2  2222313222222222222232213222211222121223222212222                   3.0  \n",
-       "3  0011222111120211000210900112009002200001129000121                   4.0  \n",
-       "4  1100102110192322101922119213121111209100121019901                   3.0  \n",
-       "\n",
-       "[5 rows x 25 columns]"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:root:Error fetching data from https://my.meteoblue.com/packages/basic-day?apikey=None&lat=16.858833907635155&lon=96.13701804078366&asl=30&format=json&forecast_days=3: 403 Client Error: Forbidden for url: https://my.meteoblue.com/packages/basic-day?apikey=None&lat=16.858833907635155&lon=96.13701804078366&asl=30&format=json&forecast_days=3\n"
+     ]
+    },
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "cannot access local variable 'data' where it is not associated with a value",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mUnboundLocalError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m meteo_weather_data = \u001b[43mget_meteoblue_weather_data\u001b[49m\u001b[43m(\u001b[49m\u001b[32;43m16.858833907635155\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m96.13701804078366\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m3\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m      2\u001b[39m meteo_weather_data.head()\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 26\u001b[39m, in \u001b[36mget_meteoblue_weather_data\u001b[39m\u001b[34m(lat, lon, forecast_days)\u001b[39m\n\u001b[32m     22\u001b[39m     logging.error(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mError fetching data from \u001b[39m\u001b[38;5;132;01m{\u001b[39;00murl\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00me\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     24\u001b[39m meteo_weather_data =[]\n\u001b[32m---> \u001b[39m\u001b[32m26\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m k, v \u001b[38;5;129;01min\u001b[39;00m \u001b[43mdata\u001b[49m.items():\n\u001b[32m     27\u001b[39m     \u001b[38;5;66;03m# print(k, '\\n', v)\u001b[39;00m\n\u001b[32m     28\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m col, val \u001b[38;5;129;01min\u001b[39;00m data[\u001b[33m'\u001b[39m\u001b[33mdata_day\u001b[39m\u001b[33m'\u001b[39m].items():\n\u001b[32m     29\u001b[39m         \u001b[38;5;66;03m# print(col, '\\n', val)\u001b[39;00m\n\u001b[32m     30\u001b[39m         \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(val)):\n\u001b[32m     31\u001b[39m             \u001b[38;5;66;03m# print(i)\u001b[39;00m\n",
+      "\u001b[31mUnboundLocalError\u001b[39m: cannot access local variable 'data' where it is not associated with a value"
+     ]
     }
    ],
    "source": [
@@ -377,7 +162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
