--- a/ambient_weather_data_api.ipynb
+++ b/ambient_weather_data_api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -119,93 +119,93 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2025-05-06</td>\n",
-       "      <td>16.8568</td>\n",
-       "      <td>96.1369</td>\n",
-       "      <td>Mayangone</td>\n",
-       "      <td>Asia/Rangoon</td>\n",
-       "      <td>Partly sunny and very warm</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>4.6</td>\n",
-       "      <td>part-sun</td>\n",
-       "      <td>253</td>\n",
-       "      <td>13.8</td>\n",
-       "      <td>78</td>\n",
-       "      <td>98</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2025-05-07</td>\n",
-       "      <td>16.8568</td>\n",
-       "      <td>96.1369</td>\n",
-       "      <td>Mayangone</td>\n",
-       "      <td>Asia/Rangoon</td>\n",
-       "      <td>Partly sunny and very warm</td>\n",
-       "      <td>0.06</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5.8</td>\n",
-       "      <td>part-sun</td>\n",
-       "      <td>252</td>\n",
-       "      <td>13.8</td>\n",
-       "      <td>79</td>\n",
-       "      <td>98</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2025-05-08</td>\n",
-       "      <td>16.8568</td>\n",
-       "      <td>96.1369</td>\n",
-       "      <td>Mayangone</td>\n",
-       "      <td>Asia/Rangoon</td>\n",
-       "      <td>Very warm with clouds and sun</td>\n",
-       "      <td>0.06</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5.8</td>\n",
-       "      <td>part-sun</td>\n",
-       "      <td>239</td>\n",
-       "      <td>13.8</td>\n",
-       "      <td>79</td>\n",
-       "      <td>98</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2025-05-09</td>\n",
-       "      <td>16.8568</td>\n",
-       "      <td>96.1369</td>\n",
-       "      <td>Mayangone</td>\n",
-       "      <td>Asia/Rangoon</td>\n",
-       "      <td>Hot with some sun</td>\n",
-       "      <td>0.06</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>5.8</td>\n",
-       "      <td>part-sun</td>\n",
-       "      <td>228</td>\n",
-       "      <td>13.8</td>\n",
-       "      <td>80</td>\n",
-       "      <td>99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
        "      <td>2025-05-10</td>\n",
        "      <td>16.8568</td>\n",
        "      <td>96.1369</td>\n",
        "      <td>Mayangone</td>\n",
        "      <td>Asia/Rangoon</td>\n",
-       "      <td>Hot with variable cloudiness</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>A t-storm late this afternoon</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>0.42</td>\n",
+       "      <td>0.42</td>\n",
        "      <td>5.8</td>\n",
-       "      <td>partly-cloudy-day</td>\n",
-       "      <td>229</td>\n",
-       "      <td>16.1</td>\n",
-       "      <td>81</td>\n",
-       "      <td>98</td>\n",
+       "      <td>thunderstorm</td>\n",
+       "      <td>232</td>\n",
+       "      <td>12.7</td>\n",
+       "      <td>80</td>\n",
+       "      <td>97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2025-05-11</td>\n",
+       "      <td>16.8568</td>\n",
+       "      <td>96.1369</td>\n",
+       "      <td>Mayangone</td>\n",
+       "      <td>Asia/Rangoon</td>\n",
+       "      <td>Cloudy, a t-storm in the p.m.</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>5.8</td>\n",
+       "      <td>thunderstorm</td>\n",
+       "      <td>226</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>78</td>\n",
+       "      <td>96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2025-05-12</td>\n",
+       "      <td>16.8568</td>\n",
+       "      <td>96.1369</td>\n",
+       "      <td>Mayangone</td>\n",
+       "      <td>Asia/Rangoon</td>\n",
+       "      <td>Some rain and a thunderstorm</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>rain</td>\n",
+       "      <td>142</td>\n",
+       "      <td>13.8</td>\n",
+       "      <td>78</td>\n",
+       "      <td>91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2025-05-13</td>\n",
+       "      <td>16.8568</td>\n",
+       "      <td>96.1369</td>\n",
+       "      <td>Mayangone</td>\n",
+       "      <td>Asia/Rangoon</td>\n",
+       "      <td>Occasional afternoon rain</td>\n",
+       "      <td>0.73</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>5.8</td>\n",
+       "      <td>rain</td>\n",
+       "      <td>139</td>\n",
+       "      <td>13.8</td>\n",
+       "      <td>78</td>\n",
+       "      <td>92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2025-05-14</td>\n",
+       "      <td>16.8568</td>\n",
+       "      <td>96.1369</td>\n",
+       "      <td>Mayangone</td>\n",
+       "      <td>Asia/Rangoon</td>\n",
+       "      <td>Some rain and a thunderstorm</td>\n",
+       "      <td>0.84</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>rain</td>\n",
+       "      <td>151</td>\n",
+       "      <td>13.8</td>\n",
+       "      <td>78</td>\n",
+       "      <td>90</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -213,35 +213,35 @@
       ],
       "text/plain": [
        "         date  latitude  longitude   township      timezone  \\\n",
-       "0  2025-05-06   16.8568    96.1369  Mayangone  Asia/Rangoon   \n",
-       "1  2025-05-07   16.8568    96.1369  Mayangone  Asia/Rangoon   \n",
-       "2  2025-05-08   16.8568    96.1369  Mayangone  Asia/Rangoon   \n",
-       "3  2025-05-09   16.8568    96.1369  Mayangone  Asia/Rangoon   \n",
-       "4  2025-05-10   16.8568    96.1369  Mayangone  Asia/Rangoon   \n",
+       "0  2025-05-10   16.8568    96.1369  Mayangone  Asia/Rangoon   \n",
+       "1  2025-05-11   16.8568    96.1369  Mayangone  Asia/Rangoon   \n",
+       "2  2025-05-12   16.8568    96.1369  Mayangone  Asia/Rangoon   \n",
+       "3  2025-05-13   16.8568    96.1369  Mayangone  Asia/Rangoon   \n",
+       "4  2025-05-14   16.8568    96.1369  Mayangone  Asia/Rangoon   \n",
        "\n",
        "                         summary  precipProbability  precipIntensity  \\\n",
-       "0     Partly sunny and very warm               0.01              0.0   \n",
-       "1     Partly sunny and very warm               0.06              0.0   \n",
-       "2  Very warm with clouds and sun               0.06              0.0   \n",
-       "3              Hot with some sun               0.06              0.0   \n",
-       "4   Hot with variable cloudiness               0.25              0.0   \n",
+       "0  A t-storm late this afternoon               0.55             0.42   \n",
+       "1  Cloudy, a t-storm in the p.m.               0.58             0.13   \n",
+       "2   Some rain and a thunderstorm               0.60             0.07   \n",
+       "3      Occasional afternoon rain               0.73             0.18   \n",
+       "4   Some rain and a thunderstorm               0.84             0.21   \n",
        "\n",
-       "   precipAccumulation  windSpeed               icon  windBearing  windGust  \\\n",
-       "0                 0.0        4.6           part-sun          253      13.8   \n",
-       "1                 0.0        5.8           part-sun          252      13.8   \n",
-       "2                 0.0        5.8           part-sun          239      13.8   \n",
-       "3                 0.0        5.8           part-sun          228      13.8   \n",
-       "4                 0.0        5.8  partly-cloudy-day          229      16.1   \n",
+       "   precipAccumulation  windSpeed          icon  windBearing  windGust  \\\n",
+       "0                0.42        5.8  thunderstorm          232      12.7   \n",
+       "1                0.13        5.8  thunderstorm          226      15.0   \n",
+       "2                0.07        4.6          rain          142      13.8   \n",
+       "3                0.18        5.8          rain          139      13.8   \n",
+       "4                0.21        4.6          rain          151      13.8   \n",
        "\n",
        "   temperatureMin  temperatureMax  \n",
-       "0              78              98  \n",
-       "1              79              98  \n",
-       "2              79              98  \n",
-       "3              80              99  \n",
-       "4              81              98  "
+       "0              80              97  \n",
+       "1              78              96  \n",
+       "2              78              91  \n",
+       "3              78              92  \n",
+       "4              78              90  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,6 +250,13 @@
     "ambient_data = get_ambient_weather_data(16.858833907635155, 96.13701804078366)\n",
     "ambient_data.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
